--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+weights/backbone_ir50_ms1m_epoch120.pth
